[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                          # error handling
bytes = "1.3.0"                                            # helps manage buffers
libc = "0.2.186"
mio = { version = "1.2.1", features = ["net", "os-ext", "os-poll"] }
thiserror = "1.0.32"                                       # error handling
