[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                    # error handling
bytes = "1.3.0"                                      # helps manage buffers
rustix = { version = "1.1.4", features = ["event"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2"                                      # error handling
