[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.59"                                                      # error handling
bytes = "1.3.0"                                                        # helps manage buffers
mio = { version = "1.2.1", features = ["net", "os-poll"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2"                                                        # error handling
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
